crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_uppercase_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..86
  HTML_BLOCK_DIV@0..22
    HTML_BLOCK_TAG@0..12
      TEXT@0..4 "<DIV"
      WHITESPACE@4..5 " "
      HTML_ATTRS@5..11
        TEXT@5..9 "id=\""
        ATTR_ID@9..10 "x"
        TEXT@10..11 "\""
      TEXT@11..12 ">"
    PLAIN@12..15
      TEXT@12..15 "foo"
    HTML_BLOCK_TAG@15..22
      TEXT@15..21 "</DIV>"
      NEWLINE@21..22 "\n"
  BLANK_LINE@22..23
    BLANK_LINE@22..23 "\n"
  HTML_BLOCK_DIV@23..44
    HTML_BLOCK_TAG@23..29
      TEXT@23..27 "<DiV"
      TEXT@27..28 ">"
      NEWLINE@28..29 "\n"
    PARAGRAPH@29..37
      TEXT@29..36 "content"
      NEWLINE@36..37 "\n"
    HTML_BLOCK_TAG@37..44
      TEXT@37..43 "</DiV>"
      NEWLINE@43..44 "\n"
  BLANK_LINE@44..45
    BLANK_LINE@44..45 "\n"
  HTML_BLOCK_DIV@45..86
    HTML_BLOCK_TAG@45..61
      TEXT@45..49 "<DIV"
      NEWLINE@49..50 "\n"
      WHITESPACE@50..52 "  "
      HTML_ATTRS@52..58
        TEXT@52..56 "id=\""
        ATTR_ID@56..57 "m"
        TEXT@57..58 "\""
      NEWLINE@58..59 "\n"
      TEXT@59..60 ">"
      NEWLINE@60..61 "\n"
    PARAGRAPH@61..79
      TEXT@61..78 "multi-line opener"
      NEWLINE@78..79 "\n"
    HTML_BLOCK_TAG@79..86
      TEXT@79..85 "</DIV>"
      NEWLINE@85..86 "\n"
