crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_with_id_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..121
  HTML_BLOCK@0..51
    HTML_BLOCK_TAG@0..51
      TEXT@0..50 "<div id=\"anchor-c\">Co ..."
      NEWLINE@50..51 "\n"
  BLANK_LINE@51..52
    BLANK_LINE@51..52 "\n"
  PARAGRAPH@52..75
    TEXT@52..56 "See "
    LINK@56..73
      LINK_START@56..57
        LINK_START@56..57 "["
      LINK_TEXT@57..61
        TEXT@57..61 "link"
      LINK_TEXT_END@61..62 "]"
      LINK_DEST_START@62..63 "("
      LINK_DEST@63..72
        TEXT@63..72 "#anchor-c"
      LINK_DEST_END@72..73 ")"
    TEXT@73..74 "."
    NEWLINE@74..75 "\n"
  BLANK_LINE@75..76
    BLANK_LINE@75..76 "\n"
  HTML_BLOCK@76..93
    HTML_BLOCK_TAG@76..93
      TEXT@76..92 "<div id=\"multi\">"
      NEWLINE@92..93 "\n"
  BLANK_LINE@93..94
    BLANK_LINE@93..94 "\n"
  PARAGRAPH@94..113
    TEXT@94..96 "A "
    EMPHASIS@96..107
      EMPHASIS_MARKER@96..97 "*"
      TEXT@97..106 "multiline"
      EMPHASIS_MARKER@106..107 "*"
    TEXT@107..112 " div."
    NEWLINE@112..113 "\n"
  BLANK_LINE@113..114
    BLANK_LINE@113..114 "\n"
  HTML_BLOCK@114..121
    HTML_BLOCK_TAG@114..121
      TEXT@114..120 "</div>"
      NEWLINE@120..121 "\n"
