crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_form_blockquote_multiline_same_line_close_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  BLOCK_QUOTE@0..30
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..30
      HTML_BLOCK_TAG@2..8
        TEXT@2..7 "<form"
        NEWLINE@7..8 "\n"
      HTML_BLOCK_CONTENT@8..30
        BLOCK_QUOTE_MARKER@8..9 ">"
        WHITESPACE@9..10 " "
        TEXT@10..29 "  id=\"x\">foo</form>"
        NEWLINE@29..30 "\n"
