crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_form_blockquote_multiline_same_line_close_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  BLOCK_QUOTE@0..30
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    HTML_BLOCK@2..30
      HTML_BLOCK_TAG@2..19
        TEXT@2..7 "<form"
        NEWLINE@7..8 "\n"
        BLOCK_QUOTE_MARKER@8..9 ">"
        WHITESPACE@9..10 " "
        WHITESPACE@10..12 "  "
        HTML_ATTRS@12..18
          TEXT@12..18 "id=\"x\""
        TEXT@18..19 ">"
      PLAIN@19..22
        TEXT@19..22 "foo"
      HTML_BLOCK_TAG@22..30
        TEXT@22..29 "</form>"
        NEWLINE@29..30 "\n"
