crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_form_multiline_same_line_close_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..26
  HTML_BLOCK@0..26
    HTML_BLOCK_TAG@0..6
      TEXT@0..5 "<form"
      NEWLINE@5..6 "\n"
    HTML_BLOCK_CONTENT@6..26
      TEXT@6..25 "  id=\"x\">foo</form>"
      NEWLINE@25..26 "\n"
