crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_form_multiline_same_line_close_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..26
  HTML_BLOCK@0..26
    HTML_BLOCK_TAG@0..15
      TEXT@0..5 "<form"
      NEWLINE@5..6 "\n"
      WHITESPACE@6..8 "  "
      HTML_ATTRS@8..14
        TEXT@8..14 "id=\"x\""
      TEXT@14..15 ">"
    PLAIN@15..18
      TEXT@15..18 "foo"
    HTML_BLOCK_TAG@18..26
      TEXT@18..25 "</form>"
      NEWLINE@25..26 "\n"
